--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-firebase/app": "8.4.5",
+    "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/native": "^5.7.5",
     "axios": "^0.19.0",
     "email-validator": "^2.0.4",
     "form-data": "3.0.0",
+    "native-base": "^2.15.0",
     "password-validator": "^5.1.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -33,19 +35,25 @@
     "react-native-bottomsheet-reanimated": "0.0.22",
     "react-native-btr": "1.1.5",
     "react-native-cli": "^2.0.1",
+    "react-native-color-picker": "^0.6.0",
     "react-native-elements": "2.3.2",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-interactable-reanimated": "0.0.8",
     "react-native-keyboard-avoiding-view": "1.0.0",
+    "react-native-mentions-editor": "^1.0.11",
     "react-native-orientation-loading-overlay": "0.1.6",
     "react-native-paper": "4.2.0",
     "react-native-password-strength-meter": "0.0.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.10.1",
+    "react-native-scrollview": "0.0.1-alpha.0",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-slider-color-picker": "^2.2.1",
+    "react-native-textarea": "^1.0.4",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.1",
     "react-navigation-stack": "2.8.3",
@@ -53,7 +61,8 @@
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.2",
-    "reduxsauce": "^1.0.1"
+    "reduxsauce": "^1.0.1",
+    "toggle-switch-react-native": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
