--- a/package.json
+++ b/package.json
@@ -42,17 +42,20 @@
     "react-native-image-picker": "^2.3.3",
     "react-native-interactable-reanimated": "0.0.8",
     "react-native-keyboard-avoiding-view": "1.0.0",
+    "react-native-mentions": "^1.1.4",
     "react-native-mentions-editor": "^1.0.11",
     "react-native-orientation-loading-overlay": "0.1.6",
     "react-native-paper": "4.2.0",
     "react-native-password-strength-meter": "0.0.3",
     "react-native-picker-select": "^8.0.4",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.10.1",
     "react-native-scrollview": "0.0.1-alpha.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-slider-color-picker": "^2.2.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-textarea": "^1.0.4",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.1",
