--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-interactable-reanimated": "0.0.8",
+    "react-native-js-bottom-sheet": "1.1.0",
     "react-native-keyboard-avoiding-view": "1.0.0",
     "react-native-mentions": "^1.1.4",
     "react-native-mentions-editor": "^1.0.11",
