--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-elements": "2.3.2",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-interactable-reanimated": "0.0.8",
     "react-native-js-bottom-sheet": "1.1.0",
@@ -52,6 +53,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "1.13.1",
+    "react-native-render-html": "^5.0.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.10.1",
     "react-native-scrollview": "0.0.1-alpha.0",
