--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "react-native-cli": "^2.0.1",
     "react-native-color-picker": "^0.6.0",
     "react-native-elements": "2.3.2",
+    "react-native-fast-image": "^8.3.4",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-gifted-chat": "^0.12.0-beta-1",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-interactable-reanimated": "0.0.8",
@@ -49,6 +51,7 @@
     "react-native-mentions-editor": "^1.0.11",
     "react-native-orientation-loading-overlay": "0.1.6",
     "react-native-paper": "4.2.0",
+    "react-native-parsed-text": "0.0.22",
     "react-native-password-strength-meter": "0.0.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -69,6 +72,7 @@
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.2",
     "reduxsauce": "^1.0.1",
+    "socket.io-client": "^3.1.1",
     "toggle-switch-react-native": "^2.3.0"
   },
   "devDependencies": {
