--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.0",
     "email-validator": "^2.0.4",
     "form-data": "3.0.0",
+    "moment": "^2.29.1",
     "native-base": "^2.15.0",
     "password-validator": "^5.1.0",
     "prop-types": "^15.7.2",
@@ -49,6 +50,7 @@
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-mentions": "^1.1.4",
     "react-native-mentions-editor": "^1.0.11",
+    "react-native-modal": "11.7.0",
     "react-native-orientation-loading-overlay": "0.1.6",
     "react-native-paper": "4.2.0",
     "react-native-parsed-text": "0.0.22",
@@ -64,6 +66,7 @@
     "react-native-slider-color-picker": "^2.2.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-textarea": "^1.0.4",
+    "react-native-timeago": "^0.5.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.1",
     "react-navigation-stack": "2.8.3",
