--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@react-native-community/google-signin": "4.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/push-notification-ios": "1.8.0",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
-    "@react-native-firebase/app": "8.4.5",
     "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/native": "^5.7.5",
     "axios": "^0.19.0",
@@ -31,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "^0.63.4",
+    "react-native-android-local-notification": "3.0.0",
     "react-native-animatable": "1.3.3",
     "react-native-awesome-alerts": "1.4.0",
     "react-native-bottomsheet-reanimated": "0.0.22",
@@ -40,6 +41,7 @@
     "react-native-elements": "2.3.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-fbsdk": "^2.0.0",
+    "react-native-firebase": "5.6.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-gifted-chat": "^0.12.0-beta-1",
     "react-native-htmlview": "^0.16.0",
@@ -48,6 +50,7 @@
     "react-native-js-bottom-sheet": "1.1.0",
     "react-native-keyboard-avoiding-view": "1.0.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-local-notifications": "^2.0.0",
     "react-native-mentions": "^1.1.4",
     "react-native-mentions-editor": "^1.0.11",
     "react-native-modal": "11.7.0",
@@ -56,6 +59,7 @@
     "react-native-parsed-text": "0.0.22",
     "react-native-password-strength-meter": "0.0.3",
     "react-native-picker-select": "^8.0.4",
+    "react-native-push-notification": "7.2.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "1.13.1",
     "react-native-render-html": "^5.0.1",
