--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>97893421916-88u27vjl9lkps7c7tk8qn631o5es7kf7.apps.googleusercontent.com</string>
+	<string>97893421916-ugj64gfqptl3q2lmcct0a8ql8bhvjpus.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.97893421916-88u27vjl9lkps7c7tk8qn631o5es7kf7</string>
+	<string>com.googleusercontent.apps.97893421916-ugj64gfqptl3q2lmcct0a8ql8bhvjpus</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>97893421916-phaflfa0aric9ihms2qg0h5ahugc3k6e.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.crecode.stylecheq</string>
+	<string>org.crecode.stylecheqApp</string>
 	<key>PROJECT_ID</key>
 	<string>style-cheq</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:97893421916:ios:ead87cd9c2a52139336799</string>
+	<string>1:97893421916:ios:3616b63c9467415e336799</string>
 	<key>DATABASE_URL</key>
 	<string>https://style-cheq.firebaseio.com</string>
 </dict>
