--- a/ios/StyleCheq/Info.plist
+++ b/ios/StyleCheq/Info.plist
@@ -110,5 +110,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>aps-environment</key>
+	<string>development</string>
 </dict>
 </plist>
