--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.8.0",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
+    "@react-native-firebase/app": "^11.2.0",
     "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/native": "^5.7.5",
     "axios": "^0.19.0",
@@ -41,7 +42,6 @@
     "react-native-elements": "2.3.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-fbsdk": "^2.0.0",
-    "react-native-firebase": "5.6.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-gifted-chat": "^0.12.0-beta-1",
     "react-native-htmlview": "^0.16.0",
