--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-native-parsed-text": "0.0.22",
     "react-native-password-strength-meter": "0.0.3",
     "react-native-picker-select": "^8.0.4",
-    "react-native-push-notification": "7.2.3",
+    "react-native-push-notification": "7.3.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "1.13.1",
     "react-native-render-html": "^5.0.1",
@@ -71,6 +71,8 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-textarea": "^1.0.4",
     "react-native-timeago": "^0.5.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
     "react-navigation": "^4.4.1",
