--- a/ios/StyleCheq/Info.plist
+++ b/ios/StyleCheq/Info.plist
@@ -68,6 +68,8 @@
 	<array>
 		<string>AntDesign.ttf</string>
 		<string>Poppins-Black.ttf</string>
+		<string>Lato-Regular.ttf</string>
+		<string>times-new-roman.ttf</string>
 		<string>Poppins-Bold.ttf</string>
 		<string>Poppins-Italic.ttf</string>
 		<string>Poppins-Light.ttf</string>
